--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -12,8 +12,7 @@
 
 {% if page.layout == 'post' or page.layout == 'page' %}
   <!-- image lazy-loading & popup -->
-  <script async
-    src="https://cdn.jsdelivr.net/combine/npm/lozad/dist/lozad.min.js,npm/magnific-popup@1/dist/jquery.magnific-popup.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/lozad/dist/lozad.min.js,npm/magnific-popup@1/dist/jquery.magnific-popup.min.js"></script>
 {% endif %}
 
 {% if page.layout == 'home'
